--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,45 @@
-h1{
-color:red;
+body{
+background:grey;
+color: white;
+}
+.main_content{
+background: yellow;
+color: black;
+margin-left: 300px;
+}
+.main_aside{
+background: blue;
+float:left;
+width: 300px;
+}
+.content{
+background: purple;
+margin-right: 25%;
+}
+.aside{
+background: green;
+float:right;
+width: 25%;
+}
+.container{
+width: 900px;
+background: black;
+height: 500px;
+margin: 0 auto;
+}
+.aside_a{
+width: 140px;
+background:green;
+height: 400px;
+border: 5px solid yellow;
+float:left;
+}
+.content_a{
+width: 740px;
+background: red;
+height: 400px;
+margin-left: 150px;
+border: 5px solid yellow;
+
+
 }
