--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,45 +1,42 @@
 body{
-background: Cornsilk;
-color:white;
+background-color: aqua;
+text-align: center;
+font-size: 1.5em;
 }
-.mine{
+.container{
 width: 1000px;
-height: 500px;
+margin: 0 auto;
 }
-.head{
-background: DarkSlateGray;
-height: 50px;
-display: block;
-
+.aside_left{
+width: 80px;
+float: left;
+background-color: gold;
+}
+.aside_right{
+width: 200px;
+float: right;
+background-color: lime;
 }
 .content{
-background: Silver;
-height: 400px;
-width: 700px;
-margin:0 auto;
-display: inline-block;
-font-size: 18px;
-color: maroon;
+background-color: blue;
+margin-right: 200px;
+margin-left: 80px;
 }
-.menu{
-width: 150px;
-background: DimGray;
-height: 400px;
-float: left;
-
+.header{
+height: 150px;
+background-color: SteelBlue;
 }
-.ad{
-width: 150px;
-background: white;
-height: 400px;
-color: black;
-text-align: center;
-float: right;
+.footer{
+height: 50px;
+background-color: DodgerBlue;
 }
-a{
-	color:gold;
+.content,
+.aside_left,
+.aside_right{
+height: 300px;
 }
-.liter{
-text-align: center;
-font-size: 40px;
+.header,
+.footer{
+width: 1000px;
+margin: 0 auto;
 }
