--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,123 +1,66 @@
 body{
-text-align: center;
 font-size: 1.5em;
+background-color: #ffa77a;
 }
-.container{
-	width: 100%;
-	height: 65px;
-	background-color:yellow;
+.parent{
 	margin: 0 auto;
-}
-.row{
 	box-sizing: border-box;
-	width: 75%;
-	height: 59px;
-	border: solid 3px green;
-	margin: 0 auto;
+	height: 300px;
+	width: 500px;
+	border: 5px solid black;
+	position: relative;
 }
-.column1{
+.parent_column{
 	box-sizing: border-box;
-	float: left;
-	border:2px solid black;
-	width: 45%;
-	height: 35px;
-	margin-top: 10px;
-	box-sizing: border-box
+	height: 70px;
+	width: 90px;
+	border: 5px solid black;
+	background-color: green;
 }
-.column2{
-	box-sizing: border-box;
-	float: right;
-	border:2px solid black;
-	width: 45%;
-	height: 35px;	
-	margin-top: 10px;
-	box-sizing: border-box
+.div1{
+	position: absolute; right: 405px; bottom: 225px;
+}
+.div2{
+	position: absolute; left: 405px; bottom: 225px;
+}
+.div3{
+	position: absolute; left: 405px; bottom: -5px;
+}
+.div4{
+	position: absolute; right: 405px; bottom: -5px;
 }
 hr{
 	visibility: hidden;
 }
-.column3{
-	float: right;
-	background-color: red;
-	width: 33%;
-	height: 35px;	
-	margin-top: 10px;
-	box-sizing: border-box;
-	border: 3px solid blue;
+.center{
+	margin:auto;
+	position: absolute; left:50%; margin-left: -50px; top: 50%; margin-top: -50px;
 }
-.column4{
-	float: left;
-	background-color: red;
-	width: 33%;
-	height: 35px;	
-	margin-top: 10px;
-	box-sizing: border-box;
-	border: 3px solid blue;
+.maket{
+	position: relative;
+	width: 100%;
 }
-.column5{
-	background-color: red;
-	width: 33%;
-	height: 35px;	
-	margin-top: 10px;
-	margin-right: 33%;
-	margin-left: 33.5%;
+.header{
 	box-sizing: border-box;
-	border: 3px solid blue;
+	height: 100px;
+	width: 1000px;
+	border: 5px solid black;
+	position: fixed; top: 0px;
+	left: 50%; margin-left: -500px;
+	background-color: #07fafa;
 
 }
-.column6,
-.column7,
-.column8,
-.column9{
-	box-sizing: border-box;
-	height: 35px;
-	width: 25%;
-	background-color: black;
-	margin-top: 10px;
-	border: 3px solid purple;
+.container{
+	margin:0 auto;
+	width: 800px;
 }
-.column6{
-float: right;
-}
-.column7{
-float: right;
-}
-.column8{
-float:left;
-}
-.column9{
-float:left;
-}
-.column10,
-.column11,
-.column12,
-.column13,
-.column14,
-.column15{
-		box-sizing: border-box;
-	height: 35px;
-	width: 14%;
-	background-color: red;
-	margin-top: 10px;
-	border: 3px solid black;
-	margin-left: 1%;
-	margin-right: 1%;
-}
-.column10{
-float: right;
-}
-.column11{
-	float: right;
-}
-.column12{
-	float: right;
-}
-.column13{
-float: left;
-}
-.column14{
-float: left
-}
-.column15{
-float: left
+.footer{
+	height: 100px;
+	width: 1000px;
+	border: 5px solid black;
+	position: absolute; bottom: -100;
+		left: 50%; margin-left: -500px;
+	background-color: #07fafa;
+
+
 }
