--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,6 +1,16 @@
+html{
+	height: 100%;
+}
 body{
-font-size: 1.5em;
-background-color: #ffa77a;
+	font-size: 1.5em;
+	background-color: #ffa77a;
+	margin:0;
+	padding:0;
+	height:auto !important;
+	height:100%;
+	min-height:100%;
+	padding-bottom: 110px;
+	position: relative;
 }
 .parent{
 	margin: 0 auto;
@@ -32,35 +42,40 @@ background-color: #ffa77a;
 hr{
 	visibility: hidden;
 }
-.center{
-	margin:auto;
-	position: absolute; left:50%; margin-left: -50px; top: 50%; margin-top: -50px;
+.center{	
+	height: 100px;
+	width: 100px;
+	position: absolute;
+	 left:50%; margin-left: -50px; 
+	 top: 50%; margin-top: -50px;
 }
-.maket{
-	position: relative;
-	width: 100%;
+.main{
+
+	height: 100%;
 }
 .header{
 	box-sizing: border-box;
 	height: 100px;
-	width: 1000px;
 	border: 5px solid black;
 	position: fixed; top: 0px;
-	left: 50%; margin-left: -500px;
+	left: 1%;
+	right: 1%;
 	background-color: #07fafa;
 
 }
 .container{
-	margin:0 auto;
-	width: 800px;
+	position: absolute;
+	left: 35%;
+	right: 35%;
 }
 .footer{
+	box-sizing: border-box;
+	position: absolute;
+	bottom: 0;
+	right: 1%;
+	left: 1%;
 	height: 100px;
-	width: 1000px;
 	border: 5px solid black;
-	position: absolute; bottom: -100;
-		left: 50%; margin-left: -500px;
 	background-color: #07fafa;
-
 
 }
