--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -64,18 +64,18 @@ hr{
 
 }
 .container{
-	position: absolute;
-	left: 35%;
-	right: 35%;
+	max-width: 960px;
+	margin: 0 auto;
 }
 .footer{
 	box-sizing: border-box;
-	position: absolute;
-	bottom: 0;
-	right: 1%;
-	left: 1%;
-	height: 100px;
 	border: 5px solid black;
 	background-color: #07fafa;
 
+
+	position: absolute;
+	bottom: 0;
+	left: 1%;
+	right: 1%;
+	height: 100px;
 }
