--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,90 +1,41 @@
 @font-face{
-	font-family:beermoney;
-	url(assets/fonts/beermoney/beermoney.css)
-}
-html{
-	height: 100%;
-}
-h1{
-		font-family: 'beermoney', cursive;
-		margin: 0 auto;
-}
-body{
-	font-family: 'beermoney', cursive;
-	font-size: 1.5em;
-	background-color: #ffa77a;
-	margin:0;
-	padding:0;
-	height:auto !important;
-	height:100%;
-	min-height:100%;
-	padding-bottom: 110px;
-	position: relative;
-}
-.parent{
-	margin: 0 auto;
-	box-sizing: border-box;
-	height: 300px;
-	width: 500px;
-	border: 5px solid black;
-	position: relative;
-}
-.parent_column{
-	box-sizing: border-box;
-	height: 70px;
-	width: 90px;
-	border: 5px solid black;
-	background-color: green;
-}
-.div1{
-	position: absolute; right: 405px; bottom: 225px;
-}
-.div2{
-	position: absolute; left: 405px; bottom: 225px;
-}
-.div3{
-	position: absolute; left: 405px; bottom: -5px;
-}
-.div4{
-	position: absolute; right: 405px; bottom: -5px;
-}
-hr{
-	visibility: hidden;
-}
-.center{	
-	height: 100px;
-	width: 100px;
-	position: absolute;
-	 left:50%; margin-left: -50px; 
-	 top: 50%; margin-top: -50px;
-}
-.main{
-
-	height: 100%;
+  font-family:intro;
+  url(assets/fonts/intro/intro.css);
 }
 .header{
-	box-sizing: border-box;
-	height: 100px;
-	border: 5px solid black;
-	position: fixed; top: 0px;
-	left: 1%;
-	right: 1%;
-	background-color: #07fafa;
+  background-color: #A62C6C;
+  color: #EDEDED;
+  border-bottom: 1px solid #5A5A5A;
+  height: 80px;
+}
+.nav-bar{
+  font-size: 1.3em;
+  font-family: 'intro', cursive;
+  font-weight: bold;
+  background-color: #E177AF;
+  color: #EDEDED;
+}
+.home{
 
 }
-.container{
-	max-width: 960px;
-	margin: 0 auto;
+.img-circle{
+  width: 20em;
+  height: 20em;
 }
-.footer{
-	box-sizing: border-box;
-	border: 5px solid black;
-	background-color: #07fafa;
-
-
-	position: absolute;
-	bottom: 0;
-	left: 1%;
-	right: 1%;
-	height: 100px;
+img{
+  width: 100%;
+  height: 100%;
+}
+.boost{
+  font-size: 1.5em;
+  background-color: #FFBEE0;
+  font-weight: lighter;
+}
+#quest{
+  font-size: 3em;
+  color: red;
+  font-weight: bold;
+}
+.answer{
+  font-size: 2em;
 }
